<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        android:id="@+id/card_view"
        android:backgroundTintMode="screen"
        android:foregroundTint="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Order Confirmation"
                  android:fontFamily="@font/baloo_thambi"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"
                />

            <TextView
                android:id="@+id/reg_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"

                />
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"



                />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"


                />

            <TextView
                android:id="@+id/t_shirt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tshirt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"


                />
            <TextView
                android:id="@+id/size"
                android:text="@string/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"


                />
            <TextView
                android:id="@+id/amt"
                android:text="@string/amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"


                />
            
            <TextView
                android:id="@+id/date"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"


                />
            <TextView
                android:id="@+id/time"
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"


                />
            <TextView
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="10dp"


                />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/confirm_dialog"
        app:cardBackgroundColor="#a4b3af"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:text="Confirm"
              android:fontFamily="@font/baloo_thambi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>