<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Deliver">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/search_record"
        app:queryHint="@string/reg"

        android:inputType="number"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_margin="10dp"
        />
    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        android:id="@+id/card_view"
        android:layout_margin="15dp"
        android:visibility="gone"
        android:backgroundTintMode="screen"
        android:foregroundTint="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reg_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"


                />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
           
            <TextView
                android:id="@+id/t_shirt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tshirt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
            <TextView
                android:id="@+id/size"
                android:text="@string/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
            <TextView
                android:id="@+id/amt"
                android:text="@string/amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
            <TextView
                android:id="@+id/due"
                android:text="@string/due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
            <TextView
                android:id="@+id/date"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
            <TextView
                android:id="@+id/time"
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
            <TextView
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:padding="5dp"

                />
        </LinearLayout>

    </android.support.v7.widget.CardView>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:visibility="gone"
          android:hint="@string/amt"
          android:id="@+id/due_amt"
          app:errorEnabled="true"
          android:padding="20dp"
          android:layout_height="wrap_content">

          <android.support.design.widget.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="number"

              />

      </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/code_"
            android:padding="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25dp"
            android:visibility="gone"
            />


        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/deliver"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:foregroundTint="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="#a4b3af"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/deliver"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/d_or_u"
                android:textColor="@color/white"
                android:fontFamily="@font/baloo_thambi"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    </ScrollView>
</FrameLayout>