<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Report">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                    <Spinner
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:entries="@array/report"
                        android:padding="15dp"
                        android:layout_margin="10dp"
                        android:spinnerMode="dialog"
                        android:id="@+id/record"
                      />

                        <Spinner
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:entries="@array/locations"
                            android:padding="15dp"
                            android:layout_margin="10dp"
                            android:spinnerMode="dialog"
                            android:id="@+id/location_"
                            />


                    </LinearLayout>


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Get Report"
                        android:padding="22dp"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/baloo_thambi"
                        android:id="@+id/get_record"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/count"
                        android:padding="20dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:text="Total Count : 0"
                          android:fontFamily="@font/baloo_thambi"
                        android:gravity="start"
                        android:layout_marginBottom="15dp"
                        />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/export_"
                          android:fontFamily="@font/baloo_thambi"
                        android:text="Export data"
                        android:layout_marginLeft="50dp"
                        android:padding="20dp"
                        android:layout_marginTop="0dp"
                        android:textColor="@android:color/black"
                        android:textSize="20dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        />

                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="7dp"
                    android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:id="@+id/table"
                    android:background="#a4b3af"
                    android:layout_height="match_parent">

                    <TableRow>
                        <TextView
                            android:text="@string/reg"
                            android:textSize="15dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:padding="5dp"
                            />

                        <TextView
                            android:text="@string/name"
                            android:textSize="15dp"
                            android:width="100dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:padding="5dp"
                            />

                        <TextView
                            android:text="@string/phone"
                            android:textSize="15dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:padding="5dp"
                            />

                        <TextView
                            android:text="@string/tshirt"
                            android:textSize="15dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:padding="5dp"
                            />


                        <TextView
                            android:text="@string/size"
                            android:textSize="15dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:padding="5dp"
                            />

                        <TextView
                            android:text="@string/amt"
                            android:textSize="15dp"
                            android:padding="5dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            />

                        <TextView
                            android:text="@string/due"
                            android:textSize="15dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:padding="5dp"
                            />

                        <TextView
                            android:text="@string/mode"
                            android:textSize="15dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:padding="5dp"
                            />

                        <TextView
                            android:text="@string/date"
                            android:textSize="15dp"
                            android:padding="10dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:width="100dp"
                            />

                        <TextView
                            android:text="@string/time"
                            android:textSize="15dp"
                            android:padding="10dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            android:width="100dp"
                            />

                        <TextView
                            android:text="@string/location"
                            android:textSize="15dp"
                            android:padding="10dp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:width="100dp"
                            />

                        <TextView
                            android:text="@string/reg_name"
                            android:textSize="15dp"
                            android:padding="10dp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:width="100dp"
                            />

                        <TextView
                            android:text="@string/deliver"
                            android:textSize="15dp"
                            android:padding="5dp"
                            android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                            />

                    </TableRow>

                </TableLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>


</FrameLayout>