<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Due_list">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Filter"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                      android:fontFamily="@font/baloo_thambi"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    />

                <SeekBar
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:min="1"
                    android:id="@+id/filter"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/seek_value"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/baloo_thambi"
                    android:gravity="start"
                    android:padding="20dp"
                    android:text="Total Count : 0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/export_"
                android:text="Export data"
                android:layout_marginLeft="500dp"
                android:padding="20dp"
                android:fontFamily="@font/baloo_thambi"
                android:textColor="@android:color/black"
               android:textAppearance="?android:attr/textAppearanceMedium"
                />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="8dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="7dp"
                android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:id="@+id/table"
                android:background="#a4b3af"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:text="@string/reg"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        />

                    <TextView
                        android:text="@string/name"
                        android:textSize="15dp"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        />

                    <TextView
                        android:text="@string/phone"
                        android:textSize="15dp"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        />

                    <TextView
                        android:text="@string/tshirt"
                        android:textSize="15dp"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"
                        android:textStyle="bold"
                        />


                    <TextView
                        android:text="@string/size"
                        android:textSize="15dp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        />


                    <TextView
                        android:text="@string/due"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:padding="5dp"
                        />

                </TableRow>

            </TableLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
    </HorizontalScrollView>


</FrameLayout>